# ur_ws

./: .gitignore
install/: local_setup.sh  setup.sh
install/Universal_Robots_ROS2_GZ_Simulation/share/Universal_Robots_ROS2_GZ_Simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/robotiq_description/share/robotiq_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.dsv  package.xml
install/universal_robots_ros2_gz_simulation/share/universal_robots_ros2_gz_simulation/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/ur/share/ur/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_bringup/lib/ur_bringup/: start_ursim.sh
install/ur_bringup/share/ur_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_calibration/include/ur_calibration/: calibration.hpp  calibration_consumer.hpp
install/ur_calibration/lib/ur_calibration/: calibration_correction
install/ur_calibration/share/ur_calibration/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ur_controllers/include/ur_controllers/: force_mode_controller.hpp  force_mode_controller_parameters.hpp  freedrive_mode_controller.hpp  freedrive_mode_controller_parameters.hpp  gpio_controller.hpp  (+11 more)
log/: latest_build
src/universal_robots_ros2_gz_simulation/: package.xml  setup.py
src/universal_robots_ros2_gz_simulation/launch/: ur10e_gripper_gazebo.launch.py
src/universal_robots_ros2_gz_simulation/ur_description/urdf/: ur10e.urdf.xacro
src/universal_robots_ros2_gz_simulation/urdf/: robotiq_2f_gripper.urdf.xacro  ur10e.urdf.xacro  ur10e_2f_gripper.urdf.xacro  ur10e_with_dummy_gripper.urdf.xacro
src/ur_simulation_gz/: package.xml  setup.py
src/ur_simulation_gz/ur_simulation_gz/: spawn_ur10e_gripper.py
(+747 files in other folders)
